Documentation update: add font and LCD

--- a/Documentation/html/_a_m_p_8c.html
+++ b/Documentation/html/_a_m_p_8c.html
@@ -187,10 +187,11 @@ Variables</h2></td></tr>
 </dl>
 <dl class="retval"><dt>Return values</dt><dd>
   <table class="retval">
-    <tr><td class="paramname">Амплитуда</td><td>средняя амплитуда сигнала в милливольтах</td></tr>
+    <tr><td class="paramname">СКЗ</td><td>средняя амплитуда сигнала в милливольтах</td></tr>
   </table>
   </dd>
 </dl>
+<p>Рассчитывает среднеквадратичное значение амплитуды (аналогично мультиметру). СКЗ = Ап*0,707 (Ап - половина размаха т.е. полной амплитуды)</p>
 <p>Если define MOVE_AVG, то амплитуда входного сигнала заменяется скользящей средней</p>
 <p>Если define SEND_AVG, то результат отправляется по USART </p>
 
