Literally worst commit ever

--- a/Documentation/html/_a_d_c__lib_8c.html
+++ b/Documentation/html/_a_d_c__lib_8c.html
@@ -187,13 +187,13 @@ Variables</h2></td></tr>
 </div><div class="memdoc">
 
 <p>Получение уровня напряжение с АЦП </p>
-<p>Подсчёт напряжения происходит в рассчете на то, что на вход приходит напряжение с добавленной константой [INPUT_AMPLITUDE/2], которую нужно игнорировать</p>
 <dl class="retval"><dt>Return values</dt><dd>
   <table class="retval">
-    <tr><td class="paramname">Напряжение</td><td>в милливольтах </td></tr>
+    <tr><td class="paramname">RealVoltage</td><td>напряжение в милливольтах</td></tr>
   </table>
   </dd>
 </dl>
+<p>Подсчёт напряжения происходит в рассчете на то, что на вход приходит напряжение с добавленной константой [INPUT_AMPLITUDE/2], которую нужно игнорировать. Такая константа добавляется внешней платой МСД-ТМ (подключение и принцип работы описан в README.md) и необходима в силу того, что АЦП контроллера Geehy отсутсвует возможность приёма сигнала с отрицательным напряжением. Другими словами, МСД-ТМ "поднимает" входной сигнал таким образом, чтобы он был всегда &gt;= 0, далее ту константу, которую прибавили к сигналу, вычитаем программно </p>
 
 </div>
 </div>
